...
    <string name="RecipeFragment_TextView_SubTitle_Ingredients">Ingredients</string>
    <string name="RecipeFragment_TextView_SubTitle_Instructions">Instructions</string>
    <string name="SearchFragment_TextView_SearchTitle">Search</string>
    <string name="SearchFragment_TextView_CategoryTitle">Category</string>
    <string name="SearchFragment_Image_Categroy">An image of the cocktail</string>
    <string name="ShoppingFragment_Textview_Title">Shoppinglist</string>
    <string name="ShoppingFragment_Button_AddItem">Add item to shoppinglist</string>
    <string name="ShoppingFragment_Button_ClearList">Clear List</string>
    <string name="NoWifi">No Wifi</string>
    <string name="ArrowToRecipe">Arrow to see the cocktail recipe</string>

    <string name="CreateRecipeFragment_TextView_Ingredient1">Ingredient 1</string>
    <string name="CreateRecipeFragment_TextView_Ingredient2">Ingredient 2</string>
    <string name="CreateRecipeFragment_TextView_Ingredient3">Ingredient 3</string>
...
