...
        <variable
            name="cocktail"
            type="com.example.mycocktails.domain.Cocktail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mycocktailbackground">

        <TextView
            android:id="@+id/RecipeFragment_TextView_CocktailTitle"
            style="@style/Screen_Title_Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cocktailName="@{cocktail}"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
...
