...
                    android:background="@android:color/background_light"
                    android:contentDescription="@string/SearchFragment_Image_Categroy"
                    android:onClick="@{() -> clickListener.onClick(category)}"
                    app:categoryImage="@{category}" />

                <Button
                    android:id="@+id/CategoryLayout_Button_CategoryName"
                    style="@style/Screen_Button_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> clickListener.onClick(category)}"
                    app:categoryName="@{category}" />
            </LinearLayout>
...
